[gd_scene load_steps=13 format=3 uid="uid://cydvv12dpwiyt"]

[ext_resource type="Script" path="res://ForImport/main_menu.gd" id="1_t4ico"]
[ext_resource type="Texture2D" uid="uid://dqutbpr5vacsh" path="res://ForImport/photo-1534237710431-e2fc698436d0.jpg" id="2_e3arb"]
[ext_resource type="FontFile" uid="uid://cp0younystipd" path="res://FONTS/Radium Corp.ttf" id="3_xastg"]
[ext_resource type="FontFile" uid="uid://btfviyro4agja" path="res://FONTS/Square Game.otf" id="4_gmuh2"]
[ext_resource type="PackedScene" uid="uid://w0i1g6wc80jo" path="res://ForImport/Main_settings.tscn" id="5_aofc5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_edg5g"]
texture = ExtResource("2_e3arb")
modulate_color = Color(0.414704, 0.414704, 0.414704, 1)

[sub_resource type="FontVariation" id="FontVariation_1nxbm"]
base_font = ExtResource("3_xastg")

[sub_resource type="FontVariation" id="FontVariation_f3c8a"]
base_font = ExtResource("4_gmuh2")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2nfvb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3rl6"]
bg_color = Color(0.736, 0.736, 0.736, 0)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xx3c8"]
bg_color = Color(0.309, 0.309, 0.309, 0)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bb7g5"]
bg_color = Color(1, 1, 1, 0)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_t4ico")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_edg5g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -292.0
offset_right = 491.0
offset_bottom = 192.0
grow_vertical = 2
scale = Vector2(1.2, 1.2)
theme_override_constants/separation = 100
alignment = 1

[node name="TITLE" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_1nxbm")
theme_override_font_sizes/font_size = 90
text = "   Comfac Global"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme_override_colors/font_hover_color = Color(0.566298, 0.566298, 0.566298, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_f3c8a")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_2nfvb")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3rl6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xx3c8")
theme_override_styles/normal = SubResource("StyleBoxFlat_bb7g5")
text = "         Start"
alignment = 0

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme_override_colors/font_hover_color = Color(0.566298, 0.566298, 0.566298, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_f3c8a")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_2nfvb")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3rl6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xx3c8")
theme_override_styles/normal = SubResource("StyleBoxFlat_bb7g5")
text = "         Settings"
alignment = 0

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
theme_override_colors/font_hover_color = Color(0.566298, 0.566298, 0.566298, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_f3c8a")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_2nfvb")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3rl6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xx3c8")
theme_override_styles/normal = SubResource("StyleBoxFlat_bb7g5")
text = "         	Quit"
alignment = 0

[node name="MainSettings" parent="." instance=ExtResource("5_aofc5")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Quit_pressed"]
